<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Activity Recognition</string>

  <string name="start_action">Start</string>
  <string name="stop_action">Stop</string>

  <string name="output_title">Output probabilities</string>
  <string name="data_collection_title">Select a class for data collection</string>
  <string name="total_instances_title">Total instances</string>
  <string name="training_stats_title">Training stats</string>
  <string name="loss_title">Loss</string>

  <string name="logo_title">On-Device Activity Recognizer</string>
  <string name="classA_class">Class A</string>
  <string name="classB_class">Class B</string>

  <string name="zero_value">0.0</string>

  <string-array name="options_array">
    <item>Data Collection</item>
    <item>Training</item>
    <item>Inference</item>
  </string-array>

  <string-array name="class_array">
    <item>Class A</item>
    <item>Class B</item>
  </string-array>

  </resources>