<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_fill"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingTop="10dp"
    android:paddingRight="5dp"
    android:paddingBottom="10dp"
    tools:context="org.tensorflow.lite.examples.transfer.MainActivity">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        app:srcCompat="@drawable/ic_logo"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/logo_title"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:fontFamily="@font/titillium_web"
        android:layout_marginBottom="10dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="7dp"
        android:paddingLeft="5dp"
        android:paddingTop="8dp"
        android:paddingRight="5dp"
        android:paddingBottom="8dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp">

        <Spinner
            android:id="@+id/optionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"/>
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_weight="0"
        android:padding="5dp"
        app:cardBackgroundColor="@android:color/darker_gray"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0.1dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/dclTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="0"
                    android:text="@string/data_collection_title"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:fontFamily="@font/titillium_web" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="0"
                    android:paddingLeft="5dp"
                    android:paddingTop="8dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="8dp"
                    app:cardBackgroundColor="@color/cardBackground"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="10dp">

                    <Spinner
                        android:id="@+id/classSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:clickable="true"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/countTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/total_instances_title"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:fontFamily="@font/titillium_web" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/classACountTitleTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:text="@string/classA_class"
                            app:fontFamily="@font/titillium_web"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/classACountValueTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/zero_value"
                            app:fontFamily="@font/titillium_web"
                            android:textColor="@android:color/white" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/classBCountTitleTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:text="@string/classB_class"
                            app:fontFamily="@font/titillium_web"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/classBCountValueTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/zero_value"
                            app:fontFamily="@font/titillium_web"
                            android:textColor="@android:color/white" />
                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_weight="0"
        android:padding="5dp"
        app:cardBackgroundColor="@android:color/darker_gray"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0.1dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/trainingStatsTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/training_stats_title"
                    app:fontFamily="@font/titillium_web"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/lossTitleTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            app:fontFamily="@font/titillium_web"
                            android:text="@string/loss_title"
                            android:textColor="@android:color/white" />
                        <TextView
                            android:id="@+id/lossValueTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/zero_value"
                            app:fontFamily="@font/titillium_web"
                            android:textColor="@android:color/white" />
                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_weight="0"
        android:padding="5dp"
        app:cardBackgroundColor="@android:color/darker_gray"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0.1dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/dinfTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/output_title"
                    app:fontFamily="@font/titillium_web"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/classAOutputTitleTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:text="@string/classA_class"
                            app:fontFamily="@font/titillium_web"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/classAOutputValueTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/zero_value"
                            app:fontFamily="@font/titillium_web"
                            android:textColor="@android:color/white" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/classBOutputTitleTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:text="@string/classB_class"
                            app:fontFamily="@font/titillium_web"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/classBOutputValueTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/zero_value"
                            app:fontFamily="@font/titillium_web"
                            android:textColor="@android:color/white" />
                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:gravity="bottom"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/startButtonCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/buttonBackground"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/startImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:tint="@color/cardview_light_background"
                app:srcCompat="@drawable/ic_start_button" />

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/start_action"
                android:textColor="@android:color/white"
                app:fontFamily="@font/titillium_web"
                android:foreground="?android:attr/selectableItemBackground"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/stopButtonCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/buttonBackground"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/stopImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:tint="@color/cardview_light_background"
                app:srcCompat="@drawable/ic_stop_button" />

            <Button
                android:id="@+id/buttonStop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/stop_action"
                app:fontFamily="@font/titillium_web"
                android:textColor="@android:color/white"
                android:foreground="?android:attr/selectableItemBackground"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>